perf(buffer): platform fast paths for writeText, measured at parity with writeString
JVM: a substituting twin of encodeUtf8ToNative (jvmMain + jvm21 shadow copy,
wired through DirectJvmBuffer/FfmBuffer/FfmAutoBuffer) writes U+FFFD straight
to the native address; heap buffers fall back to a REPLACE-configured
CharsetEncoder with replaceWith(EF BF BD) — the JDK default replacement is
'?', which would break the cross-platform byte contract.

Apple/JS/wasm/ByteArrayBuffer: writeText delegates its substituting core to
the platform writeString machinery (Foundation / TextEncoder / linear memory),
which the behavior probe measured as U+FFFD-substituting. Linux NativeBuffer
uses the simdutf single-pass transcode and falls back to the common encoder
only when simdutf whole-write no-ops on ill-formed input.

Shared dispatch (policy selection, strict pre-validation, outcome mapping)
lives in one internal inline helper; platform overrides supply only their
fastest substituting write.

Measured (same-run A/B, ascii/cjk/emoji x 64B/1K/64K):
- JVM: writeText at 0.86-1.14x writeString (parity; wins on emojiLarge)
- macOS: 0.92-1.11x (parity)
- Apple size() pass: ~227M chars/s vs ~800M chars/s full Foundation encode —
  SizeHint.Exact is a net loss on Apple unless memory-bound; UpperBound
  default stands (follow-up: CFStringGetBytes null-buffer sizing)

javap: GETSTATIC policy singletons, size() unboxed int end-to-end, lenient
result is the receiver reference (no allocation, no Integer.valueOf).